fix(navbar): add margin top on home section to dont overlap

--- a/sections-css-landing/home.css
+++ b/sections-css-landing/home.css
@@ -2,6 +2,7 @@
   padding: 30px 20px 0;
   max-width: 330px;
   margin: auto;
+  margin-top: 50px;
   overflow: hidden;
 }
 .text-home-container {
